Use clip-path instead of overflow:hidden to avoid iOS bug

--- a/global.css
+++ b/global.css
@@ -221,8 +221,8 @@ a.arrow:focus-visible span {
   width: var(--size);
   height: var(--size);
   border-radius: 50%;
-  overflow: hidden;
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.25' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+  clip-path: circle(calc(var(--size) / 2) at 50% 50%);
 }
 
 .blobs > div {
